--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,9 +30,12 @@ add_executable(
         src/main.cpp
         src/Util.cpp
         src/Util.h
+        src/ResourceManager.cpp
+        src/ResourceManager.h
         src/simulation/Simulation.cpp
         src/simulation/Simulation.h
         src/agent/Agent.h
+        src/agent/Agent.cpp
         src/agent/Cabbage.cpp
         src/agent/Cabbage.h
         src/agent/Chicken.cpp
@@ -40,6 +43,6 @@ add_executable(
         src/agent/Wolf.cpp
         src/agent/Wolf.h
         src/map/Field.cpp
-        src/map/Field.h src/agent/Agent.cpp)
+        src/map/Field.h)
 
 target_link_libraries(${PROJECT_NAME} raylib)
