--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,9 +35,10 @@ add_executable(
     "src/simulation.cpp"
     "src/platform.h"
     "src/platform.cpp"
-    "src/simulation_values.h"
+    "src/config.h"
     "src/map.h"
     "src/pathfinder.cpp"
-    "src/pathfinder.h")
+    "src/pathfinder.h"
+    src/ini.h)
 
 target_link_libraries(${PROJECT_NAME} raylib)
