Simplify simulation code

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,11 @@
 [window]
 width = 900
 height = 900
+maximized = 0
 fps = 60
-tick_time_ms = 100
+
+; Set tick_time_ms to -1 to use manual stepping
+tick_time_ms = 10
 
 [simulation]
 width = 50
@@ -17,11 +20,11 @@ energy_tick_loss = 10
 
 [cabbage]
 spawn_time = 1
-spawn_count = 5
+spawn_count = 10
 nutrition_value = 100
 
 [chicken]
-spawn_count = 25
+spawn_count = 20
 sensor_range = 15
 nutrition_value = 200
 hungry_start = 400
