--- a/config.ini
+++ b/config.ini
@@ -18,7 +18,7 @@ energy_breed_needed = 600
 energy_breed_loss = 200
 energy_tick_loss = 5
 
-[cabbage]
+[grass]
 spawn_time = 1
 spawn_count = 10
 nutrition_value = 100
