Add wolf hunger, fix window maximize

--- a/config.ini
+++ b/config.ini
@@ -5,7 +5,7 @@ maximized = 0
 fps = 60
 
 ; Set tick_time_ms to -1 to use manual stepping
-tick_time_ms = 200
+tick_time_ms = 100
 
 [simulation]
 width = 50
@@ -20,16 +20,18 @@ energy_tick_loss = 5
 
 [grass]
 spawn_time = 1
-spawn_count = 10
+spawn_count = 5
 nutrition_value = 100
 
 [chicken]
 spawn_count = 20
 sensor_range = 15
-nutrition_value = 200
+nutrition_value = 300
 hungry_start = 400
 hungry_stop = 1000
 
 [wolf]
 spawn_count = 5
-sensor_range = 30
+sensor_range = 40
+hungry_start = 300
+hungry_stop = 1000
