Add more GUI stuff

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,11 @@
 [window]
-width = 900
+width = 1300
 height = 900
 maximized = 0
 fps = 60
 
-; Set tick_time_ms to -1 to use manual stepping
-tick_time_ms = 100
+tick_time_ms = 0
+manual_stepping = 0
 
 [simulation]
 width = 50
