Add all simulation values to GUI configuration

--- a/config.ini
+++ b/config.ini
@@ -1,37 +1,38 @@
 [window]
-width = 1300
-height = 900
+width = 1316
+height = 991
 maximized = 0
-fps = 60
+fps = 0
 
-tick_time_ms = 0
+[runtime]
+tick_time_ms = 20
 manual_stepping = 0
+debug_draw = 1
 
 [simulation]
 width = 50
-height = 50
+height = 60
 chunk_width = 10
-chunk_height = 10
-
+chunk_height = 20
 energy_start = 500
+energy_tick_loss = 5
 energy_breed_needed = 600
 energy_breed_loss = 200
-energy_tick_loss = 5
 
 [grass]
 spawn_time = 1
-spawn_count = 5
+spawn_count = 10
 nutrition_value = 100
 
 [chicken]
-spawn_count = 20
-sensor_range = 15
-nutrition_value = 300
-hungry_start = 400
-hungry_stop = 1000
+spawn_count = 40
+sensor_range = 3
+nutrition_value = 400
+hunger_start = 400
+hunger_stop = 1000
 
 [wolf]
 spawn_count = 5
-sensor_range = 40
-hungry_start = 300
-hungry_stop = 1000
+sensor_range = 10
+hunger_start = 400
+hunger_stop = 1000
