--- a/config.ini
+++ b/config.ini
@@ -11,33 +11,37 @@ manual_stepping = 0
 debug_draw = 0
 
 [seed]
-manual = 0
-seed =
+manual = 1
+seed = 1500540121
+
+[genes]
+max_offsprings = 5
+max_sensor_range = 20
 
 [simulation]
-width = 50
-height = 50
-chunk_width = 10
-chunk_height = 10
-energy_start = 400
-energy_tick_loss = 3
-energy_breed_needed = 500
-energy_breed_loss = 250
+width = 200
+height = 200
+chunk_width = 20
+chunk_height = 20
+energy_start = 10000
+energy_tick_loss = 1
+energy_breed_needed = 7000
+energy_breed_loss = 3000
 
 [grass]
 spawn_time = 1
-spawn_count = 8
-nutrition_value = 150
+spawn_count = 60
+nutrition_value = 500
 
 [chicken]
-spawn_count = 25
-sensor_range = 3
-nutrition_value = 200
-hunger_start = 400
-hunger_stop = 1000
+spawn_count = 400
+sensor_range = 5
+nutrition_value = 2000
+hunger_start = 7000
+hunger_stop = 10000
 
 [wolf]
-spawn_count = 5
-sensor_range = 3
-hunger_start = 400
-hunger_stop = 700
+spawn_count = 80
+sensor_range = 8
+hunger_start = 7000
+hunger_stop = 10000
