Add boolean config properties

--- a/config.ini
+++ b/config.ini
@@ -1,47 +1,47 @@
 [window]
-width = 1316
-height = 991
-style = 0
-maximized = 0
-fps = 0
+width=1316
+height=991
+style=0
+maximized=false
+fps=0
 
 [runtime]
-tick_time_ms = 10
-manual_stepping = 0
-debug_draw = 0
+tick_time_ms=10
+manual_stepping=false
+debug_draw=false
 
 [seed]
-manual = 1
-seed = 1500540121
+manual=true
+seed=1500540121
 
 [genes]
-max_offsprings = 5
-max_sensor_range = 20
+max_offsprings=5
+max_sensor_range=20
 
 [simulation]
-width = 200
-height = 200
-chunk_width = 20
-chunk_height = 20
-energy_start = 10000
-energy_tick_loss = 1
-energy_breed_needed = 7000
-energy_breed_loss = 3000
+width=200
+height=200
+chunk_width=20
+chunk_height=20
+energy_start=10000
+energy_tick_loss=1
+energy_breed_needed=7000
+energy_breed_loss=3000
 
 [grass]
-spawn_time = 1
-spawn_count = 60
-nutrition_value = 500
+spawn_time=1
+spawn_count=60
+nutrition_value=500
 
 [chicken]
-spawn_count = 400
-sensor_range = 5
-nutrition_value = 2000
-hunger_start = 7000
-hunger_stop = 10000
+spawn_count=400
+sensor_range=5
+nutrition_value=2000
+hunger_start=7000
+hunger_stop=10000
 
 [wolf]
-spawn_count = 80
-sensor_range = 8
-hunger_start = 7000
-hunger_stop = 10000
+spawn_count=80
+sensor_range=8
+hunger_start=7000
+hunger_stop=10000
