Individual energy settings, display avg. genes, save zoom to config

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@ width=1316
 height=991
 style=0
 maximized=false
+zoom=1.0
 fps=0
 
 [runtime]
@@ -15,33 +16,34 @@ manual=false
 seed=3063046341
 
 [genes]
-max_offsprings=5
-max_sensor_range=20
+max_offsprings=4
+max_sensor_range=8
 
 [simulation]
-width=200
-height=200
+width=50
+height=50
 chunk_width=20
 chunk_height=20
-energy_start=10000
-energy_tick_loss=1
-energy_breed_needed=7000
-energy_breed_loss=3000
 
 [grass]
-spawn_time=1
-spawn_count=60
-nutrition_value=500
+spawn_count=5
+nutritional_value=50
 
 [chicken]
-spawn_count=400
-sensor_range=5
-nutrition_value=2000
-hunger_start=7000
-hunger_stop=10000
+spawn_count=25
+sensor_range=3
+energy_start=500
+energy_loss=1
+hunger_start=600
+hunger_stop=1000
+breed_cost=250
+nutritional_value=2000
 
 [wolf]
-spawn_count=80
-sensor_range=8
-hunger_start=7000
-hunger_stop=10000
+spawn_count=3
+sensor_range=4
+energy_start=500
+energy_loss=1
+hunger_start=600
+hunger_stop=1000
+breed_cost=500
