--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [window]
-width=1316
-height=991
-style=0
+width=1350
+height=860
+style=3
 maximized=false
 zoom=1.0
 fps=0
@@ -13,7 +13,7 @@ debug_draw=false
 
 [seed]
 manual=false
-seed=3063046341
+seed=secret seed
 
 [genes]
 max_offsprings=4
@@ -30,7 +30,7 @@ spawn_count=5
 nutritional_value=50
 
 [chicken]
-spawn_count=25
+spawn_count=8
 sensor_range=3
 energy_start=500
 energy_loss=1
