Add help and about window, fix some GUI problems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,19 @@
 cmake_minimum_required(VERSION 3.11)
 project(sim)
 
+function(message)
+    if(NOT MESSAGE_QUIET)
+        _message(${ARGN})
+    endif()
+endfunction()
+
+if(MSVC)
+    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
+endif()
+
 set(CMAKE_CXX_STANDARD 17)
 
 find_package(raylib 3.0 QUIET)
-
 if(NOT raylib_FOUND) # If there's none, fetch and build raylib
     include(FetchContent)
 
@@ -20,8 +29,9 @@ if(NOT raylib_FOUND) # If there's none, fetch and build raylib
             CACHE BOOL "" FORCE) # don't build the supplied examples
 
         # build raylib
+        set(MESSAGE_QUIET ON)
         add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
-
+        unset(MESSAGE_QUIET)
     endif()
 endif()
 
