--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,11 @@
 [window]
 width=1350
 height=860
-style=3
+style=2
 maximized=false
-zoom=1.0
+zoom=0.5
 fps=0
+help=true
 
 [runtime]
 tick_time_ms=10
@@ -13,37 +14,37 @@ debug_draw=false
 
 [seed]
 manual=false
-seed=secret seed
+seed=your seed
 
 [genes]
-max_offsprings=4
-max_sensor_range=8
+max_offsprings=3
+max_sensor_range=10
 
 [simulation]
-width=50
-height=50
-chunk_width=20
-chunk_height=20
+width=100
+height=100
+chunk_width=10
+chunk_height=10
 
 [grass]
-spawn_count=5
-nutritional_value=50
+spawn_count=6
+nutritional_value=100
 
 [chicken]
-spawn_count=8
+spawn_count=50
 sensor_range=3
-energy_start=500
-energy_loss=1
-hunger_start=600
-hunger_stop=1000
-breed_cost=250
-nutritional_value=2000
-
-[wolf]
-spawn_count=3
-sensor_range=4
-energy_start=500
+energy_start=1000
 energy_loss=1
 hunger_start=600
 hunger_stop=1000
 breed_cost=500
+nutritional_value=1000
+
+[wolf]
+spawn_count=4
+sensor_range=7
+energy_start=3000
+energy_loss=1
+hunger_start=2000
+hunger_stop=3000
+breed_cost=1000
