Add population plot

--- a/config.ini
+++ b/config.ini
@@ -1,50 +1,51 @@
 [window]
-width=1350
-height=860
+width=1280
+height=720
 style=2
 maximized=false
-zoom=0.5
+zoom=0.3
 fps=0
-help=true
+help=false
 
-[runtime]
-tick_time_ms=10
-manual_stepping=false
-debug_draw=false
+[control]
+tick_time=5
+pause=false
+plot=true
+debug=false
 
 [seed]
 manual=false
-seed=your seed
+seed=3930932309
 
 [genes]
-max_offsprings=3
+max_offsprings=6
 max_sensor_range=10
 
 [simulation]
-width=100
+width=150
 height=100
 chunk_width=10
 chunk_height=10
 
 [grass]
 spawn_count=6
-nutritional_value=100
+nutritional_value=200
 
 [chicken]
-spawn_count=50
+spawn_count=100
 sensor_range=3
 energy_start=1000
-energy_loss=1
+energy_loss=2
 hunger_start=600
 hunger_stop=1000
-breed_cost=500
-nutritional_value=1000
+breed_cost=250
+nutritional_value=1250
 
 [wolf]
-spawn_count=4
-sensor_range=7
+spawn_count=5
+sensor_range=6
 energy_start=3000
 energy_loss=1
-hunger_start=2000
-hunger_stop=3000
+hunger_start=3000
+hunger_stop=5000
 breed_cost=1000
