Link MSVC runtime statically

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ include_directories(${PROJECT_BINARY_DIR})
 
 set(CMAKE_CXX_STANDARD 17)
 
+if(MSVC)
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+endif()
+
 find_package(raylib 3.0 QUIET)
 if(NOT raylib_FOUND) # If there's none, fetch and build raylib
     include(FetchContent)
@@ -50,7 +54,6 @@ target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC "third_party")
 target_link_libraries(${PROJECT_NAME} raylib)
 
 if(MSVC AND CMAKE_BUILD_TYPE STREQUAL "Release")
-    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded")
     find_program(RESOURCE_HACKER "ResourceHacker.exe")
     if(RESOURCE_HACKER)
         add_custom_command(
