--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.18)
+cmake_minimum_required(VERSION 3.15)
 project(sim VERSION "1.1.3")
 
 configure_file("src/version.h.in" "version.h" @ONLY)
@@ -51,10 +51,11 @@ add_executable(
     "src/util.cpp")
 
 target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC "third_party" "third_party/luajit/src")
-target_link_libraries(${PROJECT_NAME} raylib lua51)
+target_link_libraries(${PROJECT_NAME} raylib)
 
 if(MSVC)
     target_link_directories(${PROJECT_NAME} PUBLIC "bin")
+    target_link_libraries(${PROJECT_NAME} lua51)
     add_custom_command(
         TARGET ${PROJECT_NAME}
         POST_BUILD
@@ -71,4 +72,6 @@ if(MSVC)
             WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
             COMMENT "Packing release...")
     endif()
+else()
+    target_link_libraries(${PROJECT_NAME} luajit-5.1)
 endif()
