Add generating zarzecze GIFs

--- a/config.ini
+++ b/config.ini
@@ -1,52 +1,53 @@
 [window]
-width=1280
-height=720
-style=0
+width=1350
+height=860
+style=3
 maximized=false
-zoom=0.3
+zoom=0.2
 fps=0
-help=true
+help=false
+tile_size=32
 
 [control]
 script=0
-tick_time=5
-pause=false
-plot=true
+tick_time=0
+pause=true
+plot=false
 debug=false
 
 [seed]
 manual=false
-seed=3930932309
+seed=secret seed
 
 [genes]
-max_offsprings=6
-max_sensor_range=10
+max_offsprings=4
+max_sensor_range=8
 
 [simulation]
-width=150
-height=100
-chunk_width=10
-chunk_height=10
+width=25
+height=25
+chunk_width=5
+chunk_height=5
 
 [grass]
-spawn_count=6
-nutritional_value=200
+spawn_count=5
+nutritional_value=50
 
 [chicken]
-spawn_count=100
+spawn_count=8
 sensor_range=3
-energy_start=1000
-energy_loss=2
+energy_start=500
+energy_loss=1
 hunger_start=600
 hunger_stop=1000
 breed_cost=250
-nutritional_value=1250
+nutritional_value=2000
 
 [wolf]
-spawn_count=5
-sensor_range=6
-energy_start=3000
+spawn_count=3
+sensor_range=4
+energy_start=500
 energy_loss=1
-hunger_start=3000
-hunger_stop=5000
-breed_cost=1000
+hunger_start=600
+hunger_stop=1000
+breed_cost=500
