Change config for better zarzecze generation

--- a/config.ini
+++ b/config.ini
@@ -3,15 +3,15 @@ width=1350
 height=860
 style=3
 maximized=false
-zoom=0.2
+zoom=1.9
 fps=0
 help=false
-tile_size=32
+tile_size=32.0
 
 [control]
 script=0
-tick_time=0
-pause=true
+tick_time=20
+pause=false
 plot=false
 debug=false
 
@@ -30,24 +30,24 @@ chunk_width=5
 chunk_height=5
 
 [grass]
-spawn_count=5
-nutritional_value=50
+spawn_count=3
+nutritional_value=150
 
 [chicken]
-spawn_count=8
+spawn_count=20
 sensor_range=3
 energy_start=500
 energy_loss=1
-hunger_start=600
-hunger_stop=1000
-breed_cost=250
-nutritional_value=2000
+hunger_start=400
+hunger_stop=600
+breed_cost=400
+nutritional_value=200
 
 [wolf]
-spawn_count=3
-sensor_range=4
-energy_start=500
-energy_loss=1
-hunger_start=600
-hunger_stop=1000
-breed_cost=500
+spawn_count=4
+sensor_range=3
+energy_start=300
+energy_loss=5
+hunger_start=900
+hunger_stop=1200
+breed_cost=900
